Fixed the extra spaces on the right side of the icon

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -832,7 +832,7 @@
         background-position: center;
         position: relative;
         bottom: -1px;
-        padding: 5px 7px 5px 7px;
+        padding: 5px 0px 5px 5px;
 
         // about:newtab
         &.fa-search {
@@ -862,6 +862,7 @@
         font-size: 12px;
         font-weight: 500;
         color: @siteEVColor;
+        padding-left: 5px;
         padding-right: 5px;
         border-right: 1px solid #ccc;
         overflow: hidden;
